Update feedback widget script with 'defer' attribute
Added the 'defer' attribute to the feedback widget script for improved loading behavior. This ensures the script is executed only after the HTML is fully parsed, enhancing page performance and user experience.

--- a/web/frontend/rl-angular-spa/src/index.html
+++ b/web/frontend/rl-angular-spa/src/index.html
@@ -36,7 +36,7 @@
     type="text/css"
     href="theme-light.css"
   />
-  <script async src="http://roomyledger.api.kavindra.io/v1/feedback-widget.js"></script>
+  <script async defer src="http://roomyledger.api.kavindra.io/v1/feedback-widget.js"></script>
 </head>
 <body class="min-h-screen antialiased mat-typography" data-theme="dark">
 <app-root></app-root>
