--- a/web/frontend/rl-angular-spa/src/index.html
+++ b/web/frontend/rl-angular-spa/src/index.html
@@ -36,7 +36,7 @@
     type="text/css"
     href="theme-light.css"
   />
-  <script async defer src="http://roomyledger.api.echonexus.io/v1/scripts/feedback-widget.js"></script>
+  <script async defer src="https://roomyledger.api.echonexus.io/v1/scripts/feedback-widget.js"></script>
 </head>
 <body class="min-h-screen antialiased mat-typography" data-theme="dark">
 <app-root></app-root>
